--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,12 +1,18 @@
 page-home {
+  background:#222;
+
+  .content{
+    background:#333;
+  }
 .mef-player{
   min-width:200px;
   width: calc(32vw - 1px);
-  height: calc((32vw -1px) / 1.3);
+  // height: calc((32vw -1px) / 1.3);
   float:left;
   background-color: #333;
+margin: 0 1px 0;
 
-  video {
+  video, .vxgplayer {
     width: 100%;
     height: 100%;
   }
